[gd_scene load_steps=3 format=3 uid="uid://bvt8ywexkxywl"]

[ext_resource type="StyleBox" uid="uid://4ofn8vyk6t11" path="res://ui/default_style_box_flat.tres" id="1_grd4k"]
[ext_resource type="Script" path="res://ui/sections/combat/CombatStanceEntry.gd" id="1_vfoe4"]

[node name="CombatStanceEntry" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_grd4k")
script = ExtResource("1_vfoe4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 68.0
offset_bottom = 117.0

[node name="StanceName" type="Label" parent="VBoxContainer"]
offset_right = 67.0
offset_bottom = 26.0
text = "Stance #"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 67.0
offset_bottom = 116.0
columns = 2

[node name="AttackHeader" type="Label" parent="VBoxContainer/GridContainer"]
offset_right = 61.0
offset_bottom = 26.0
text = "Attack "

[node name="AttackTypes" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 65.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 24.0
mouse_filter = 1

[node name="DefendHeader" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 30.0
offset_right = 61.0
offset_bottom = 56.0
text = "Defend "

[node name="DefendTypes" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 65.0
offset_top = 31.0
offset_right = 66.0
offset_bottom = 54.0
mouse_filter = 1

[node name="FatigueHeader" type="Label" parent="VBoxContainer/GridContainer"]
offset_top = 60.0
offset_right = 61.0
offset_bottom = 86.0
text = "Fatigue "

[node name="FatigueAmt" type="Label" parent="VBoxContainer/GridContainer"]
offset_left = 65.0
offset_top = 61.0
offset_right = 66.0
offset_bottom = 84.0
